[package]
name = "markplus"
version = "0.1.0"
edition = "2021"
description = "Community CLI for MarkPlus - Everything MarkPlus has to offer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/markplus/markplus-oss"
homepage = "https://github.com/markplus/markplus-oss"
documentation = "https://docs.rs/markplus-oss"
readme = "README.md"
keywords = ["markdown", "cli", "markplus", "parser", "ast"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
markplus_core = "1.0.0"

[[bin]]
name = "markplus-oss"
path = "src/main.rs"
required-features = ["cli"]
